<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiodataActivity"
    android:orientation="vertical"
    android:background="@color/whitetwo">

    <RelativeLayout
        android:layout_width="367dp"
        android:layout_height="705dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="240dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="620dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/nama"
            android:textColor="@color/black3"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/inputNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="577dp"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/contoh_nama" />

        <EditText
            android:id="@+id/inputUmur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="457dp"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/contoh_umur" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="499dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/umur"
            android:textColor="@color/black3"
            android:textSize="22sp" />

        <Button
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="619dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="38dp"
            android:background="@drawable/button_kuning"
            android:fontFamily="@font/nunito_bold"
            android:onClick="onClickHi"
            android:text="@string/selanjutnya"
            android:textAllCaps="false"
            android:textColor="@color/black3"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>