<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/whitetwo">

    <RelativeLayout
        android:layout_width="367dp"
        android:layout_height="573dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">


        <TextView
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="101dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/kode"
            android:textColor="@color/black87"
            android:textSize="21sp" />

        <TextView
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="460dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/ket_kode"
            android:textColor="@color/black3"
            android:textSize="17sp" />

        <Button
            android:layout_width="364dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="262dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="265dp"
            android:background="@drawable/button_kuning"
            android:fontFamily="@font/nunito_bold"
            android:onClick="onClickBiodata"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@color/black3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="368dp"
            android:background="@drawable/kotak_input"
            android:hint="A1B2C3"
            android:textAlignment="center"
            android:textColorHint="@color/black3"
            android:textStyle="bold" />

        <TextView
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="322dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/dengan_menekan"
            android:textColor="@color/black3"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:background="@color/white">

        <TextView
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="86dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/belumpunyakode"
            android:textSize="17sp" />

        <Button
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_ungu"
            android:fontFamily="@font/nunito_bold"
            android:foregroundGravity="center"
            android:text="@string/belikode"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp">

        </Button>
    </RelativeLayout>

</LinearLayout>